# night-chess

./: .env.example  .gitignore  CLAUDE.md  README.md  bugs.md  docker-compose.yml  next-steps.md  requirements.md  todos.md
.aiwg/architecture/: architecture-sketch.md
.aiwg/frameworks/: registry.json
.aiwg/intake/: option-matrix.md  project-intake.md  solution-profile.md
.aiwg/management/: business-case.md
.aiwg/planning/: BACKLOG-ARCHIVED.md  BACKLOG.md  scope-boundaries.md
.aiwg/reports/: inception-completion-report.md  lom-report.md
.aiwg/requirements/: vision-document.md
.aiwg/risks/: risk-list.md
.aiwg/security/: data-classification.md  privacy-impact-assessment.md
.claude/: settings.json
backend/: .env.example  .env.test.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  puzzles.py  users.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial_schema.py  002_add_user_rating.py
backend/app/models/: __init__.py  puzzle.py  refresh_token.py  user.py  user_progress.py
backend/app/schemas/: auth.py  progress.py  puzzle.py
backend/app/services/: auth_service.py  progress_service.py  puzzle_service.py
backend/scripts/: import_puzzles.py
backend/tests/: conftest.py  test_auth.py  test_cors.py  test_health.py  test_import_puzzles.py  test_progress.py  test_puzzle_service.py  test_puzzles_api.py  test_smoke.py
frontend/: Dockerfile  jest.config.js  jest.setup.ts  package.json
(+222 files in other folders)
